<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" templateMergeStrategy="preserve" translatable="false">Jlajah</string>
    <string name="maps_api_key" translatable="false">AIzaSyCLLJVejWLlFlB1NvA6iJ4KYDzQdplbkO4</string>
    <string name="beranda">Beranda</string>
    <string name="akun">Akun</string>
    <string name="bookmark">Bookmark</string>
    <string name="peta">Peta</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cari_lokasi">Cari Lokasi</string>
    <string name="image_description" translatable="false">Image Description</string>
    <string name="kategori">Kategori</string>
    <string name="lokasi_populer">Lokasi Populer</string>
    <string name="title" translatable="false">title</string>
    <string name="alamat_lokasi">alamat lokasi</string>
    <string name="score_rating" translatable="false">5.0</string>
    <string name="nama_lokasi">Nama Lokasi</string>
    <string name="tampilkan">Tampilkan</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="informasi_kontak">Informasi Kontak</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="email_kami">Email Kami</string>
    <string name="untuk_bisnis_lebih_lanjut">Untuk bisnis lebih lanjut</string>
    <string name="menuju_lokasi">Menuju Lokasi</string>
    <string name="kunjung_kami">Kunjung Kami</string>
    <string name="lihat_review">LIHAT ULASAN</string>
    <string name="masukkan_rating">Masukkan Rating</string>
    <string name="masukkan_review">Masukkan Ulasan</string>
    <string name="sembunyikan">Sembunyikan</string>
    <string name="submit" translatable="false">SUBMIT</string>
    <string name="tanggal_review" translatable="false">30/12/2019 19:30</string>
    <string name="review_anda">Ulasan Anda</string>
    <string name="edit_review_anda">Edit ulasan anda</string>
    <string name="tulis_ulasan">Tulis Ulasan</string>
    <string name="posting" translatable="false">POSTING</string>
    <string name="nama_user">NAMA USER</string>
    <string name="data_diri">Data Diri</string>
    <string name="email_account" translatable="false">email@email.com</string>
    <string name="kosong" translatable="false">-</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="bahasa">Bahasa</string>
    <string name="simpan">SIMPAN</string>
    <string name="keluar">KELUAR</string>
    <string name="bookmark_kosong">Anda tidak memiliki lokasi yang ditandai</string>
    <string name="hapus_lokasi">Hapus Lokasi</string>
    <string name="yakin_hapus_lokasi">Yakin ingin menghapus Lokasi?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="geser_kiri_kanan">Geser item ke kiri atau kanan untuk menghapus dari daftar bookmark. Geser ke bawah untuk segarkan</string>
    <string name="share">Bagikan</string>
    <string name="unbookmark" translatable="false">Unbookmark</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_telepon">No Telepon</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="pria">Laki-laki</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="wanita">Perempuan</string>
    <string name="pilih">Pilih</string>
    <string name="batal">Batal</string>
    <string name="username" translatable="false">Username</string>
    <string name="username_kosong">username tidak boleh kosong</string>
    <string name="email_kosong">email tidak boleh kosong</string>
    <string name="password_kosong">password tidak boleh kosong</string>
    <string name="nama_kosong">nama tidak boleh kosong</string>
    <string name="notelp_kosong">no telp tidak boleh kosong</string>
    <string name="username_spasi">username tidak boleh ada spasi</string>
    <string name="username_tidak_benar">username tidak benar</string>
    <string name="email_tidak_benar">email tidak benar</string>
    <string name="password_length">password harus lebih dari 6 karakter</string>
    <string name="password_tidak_sama">password tidak sama</string>
    <string name="terjadi_kesalahan">Terjadi kesalahan</string>
    <string name="cek_koneksi">Gagal memuat, cek koneksi anda</string>
    <string name="username_email_ada">Username atau email sudah ada</string>
    <string name="username_password_salah">Username atau password salah, silahkan coba lagi</string>
    <string name="yakin_keluar">Yakin ingin keluar?</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="english" translatable="false">English</string>
    <string name="bahasa_diubah">Bahasa berhasil diubah</string>
    <string name="password_diubah">Password berhasil diubah</string>
    <string name="password_lama">Password lama</string>
    <string name="password_baru">Password baru</string>
    <string name="password_lama_salah">Password lama tidak benar</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="username_password_kosong">Username atau password tidak boleh kosong</string>
    <string name="password_lama_kosong">Password lama tidak boleh kosong</string>
    <string name="password_baru_kosong">Password baru tidak boleh kosong</string>
    <string name="profil_diubah">Profil berhasil diubah</string>
    <string name="email_tidak_ditemukan">Email tidak ditemukan</string>
    <string name="lupa_pass_cek_email">Permintaan reset password berhasil, silahkan cek email anda untuk aktivasi</string>
    <string name="tutup">Tutup</string>
    <string name="nol" translatable="false">0.0</string>
    <string name="tidak_ada_ulasan">Tidak ada ulasan</string>
    <string name="review_ditambah">Ulasan berhasil ditambah</string>
    <string name="akses_ditolak">Akses Ditolak</string>
    <string name="coba_lagi">coba lagi</string>
    <string name="filter">Filter Lokasi</string>
    <string name="ascending" translatable="false">A-Z (Ascending)</string>
    <string name="descending" translatable="false">Z-A (Descending)</string>
    <string name="terdekat">Terdekat</string>
    <string name="lokasi_ditambahkan_bookmark">Lokasi ditambah ke bookmark</string>
    <string name="lokasi_dihapus_bookmark">Lokasi dihapus dari bookmark</string>
    <string name="tidak_ada_lokasi_yang_ditandai">Tidak ada lokasi yang ditandai</string>
    <string name="radius" translatable="false">Radius</string>
    <string name="izin_diberikan">Izin diberikan</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="masukan_nilai_radius">Masukkan Nilai Radius (meter)</string>
    <string name="nilai_radius">Nilai radius</string>
    <string name="anda_melebihi_batas_radius">Anda melebihi batas radius</string>
    <string name="diperlukan_izin_lokasi">Diperlukan izin akses lokasi anda</string>
    <string name="izinkan">Izinkan</string>
    <string name="posisi_anda">Posisi Anda</string>
    <string name="lokasi_tidak_aktif">Lokasi Tidak Aktif</string>
    <string name="perangkat_belum_terdeteksi_lokasi_aktif">Perangkat anda terdeteksi belum mengaktifkan lokasi</string>
    <string name="hapus_berhasil">Hapus Berhasil</string>
    <string name="aktifkan">Aktifkan</string>
</resources>
