<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:title="@string/beranda"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/map"
        android:title="@string/peta"
        android:icon="@drawable/ic_map_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/bookmark"
        android:title="@string/bookmark"
        android:icon="@drawable/ic_book_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/account"
        android:title="@string/akun"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="ifRoom"/>
</menu>