<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_width="220dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_lokasi_image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            android:id="@+id/tv_nama_lokasi"
            android:maxLines="1"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_alamat_lokasi"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:textSize="12sp"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat_lokasi"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRatingBar
                android:clickable="false"
                android:id="@+id/rsb_bintang_lokasi"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="5"/>

            <TextView
                android:id="@+id/tv_score_lokasi"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score_rating"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>