<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:contentDescription="@string/image_description"
                android:layout_centerInParent="true"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/jlajah_white_1"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/enambelas"
                android:layout_marginEnd="@dimen/enambelas"
                android:layout_marginBottom="@dimen/delapan"
                app:cardCornerRadius="@dimen/delapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_nothing"
                    android:hint="@string/email"
                    tools:ignore="Autofill" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/enambelas"
                android:layout_marginEnd="@dimen/enambelas"
                android:layout_marginBottom="@dimen/delapan"
                app:cardCornerRadius="@dimen/delapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_nothing"
                    android:hint="@string/password"
                    tools:ignore="Autofill" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:textSize="14sp"
                android:layout_gravity="end"
                android:textColor="@android:color/white"
                android:layout_marginStart="@dimen/enambelas"
                android:layout_marginEnd="@dimen/enambelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lupa_password"
                android:padding="8dp"
                android:textAlignment="textEnd"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_margin="@dimen/enambelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_primary_dark"
                    android:text="@string/masuk"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_margin="@dimen/enambelas"
                    android:id="@+id/tv_daftar_btn"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:text="@string/daftar"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>