<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/delapan"
    app:cardCornerRadius="@dimen/delapan">

    <LinearLayout
        android:padding="@dimen/enambelas"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_username"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_review"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5" />

            <TextView
                android:id="@+id/tv_waktu_review"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_review"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/delapan"/>

        <TextView
            android:id="@+id/tv_deskripsi_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>