<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_lokasi_kategori"
            android:contentDescription="@string/image_description"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_background"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nama_lokasi_kategori"
                android:maxLines="1"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_lokasi"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/tv_alamat_lokasi_kategori"
                android:maxLines="1"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat_lokasi"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

</LinearLayout>