<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/btn_primary"
    tools:context=".signup.SignupActivity">

    <com.google.android.material.appbar.AppBarLayout
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_signup"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/enambelas"
                android:layout_marginEnd="@dimen/enambelas"
                android:layout_marginBottom="@dimen/delapan"
                app:cardCornerRadius="@dimen/delapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:inputType="text"
                    android:padding="@dimen/enambelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_nothing"
                    android:hint="@string/nama_lengkap"
                    tools:ignore="Autofill" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/enambelas"
                android:layout_marginEnd="@dimen/enambelas"
                android:layout_marginBottom="@dimen/delapan"
                app:cardCornerRadius="@dimen/delapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/enambelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_nothing"
                    android:hint="@string/email"
                    tools:ignore="Autofill" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/enambelas"
                android:layout_marginEnd="@dimen/enambelas"
                android:layout_marginBottom="@dimen/delapan"
                app:cardCornerRadius="@dimen/delapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:inputType="text"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_nothing"
                    android:hint="@string/no_telepon"
                    tools:ignore="Autofill" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/enambelas"
                android:layout_marginEnd="@dimen/enambelas"
                android:layout_marginBottom="@dimen/delapan"
                app:cardCornerRadius="@dimen/delapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:enabled="false"
                        android:inputType="text"
                        android:padding="@dimen/enambelas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_nothing"
                        android:hint="@string/gender"
                        tools:ignore="Autofill" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pria"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:paddingEnd="32dp"
                        android:paddingStart="0dp"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/enambelas"
                android:layout_marginEnd="@dimen/enambelas"
                android:layout_marginBottom="@dimen/delapan"
                app:cardCornerRadius="@dimen/delapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:inputType="textPassword"
                    android:padding="@dimen/enambelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_nothing"
                    android:hint="@string/password"
                    tools:ignore="Autofill" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/enambelas"
                android:layout_marginEnd="@dimen/enambelas"
                android:layout_marginBottom="@dimen/delapan"
                app:cardCornerRadius="@dimen/delapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:inputType="text"
                    android:padding="@dimen/enambelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_nothing"
                    android:hint="@string/ulangi_password"
                    tools:ignore="Autofill" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="@dimen/enambelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_primary_dark"
                android:text="@string/daftar"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>