<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/image_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/jlajah"
            android:padding="16dp"/>

        <androidx.cardview.widget.CardView
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:textSize="14sp"
                android:inputType="text"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:drawableEnd="@drawable/filter"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:background="@drawable/edt_nothing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cari_lokasi"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:padding="8dp"
                android:id="@+id/rv_kategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="@dimen/enambelas"
            android:layout_marginStart="@dimen/delapan"
            android:layout_marginEnd="@dimen/delapan"
            android:layout_marginBottom="@dimen/delapan"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lokasi_populer"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:padding="@dimen/delapan"
            android:id="@+id/rv_lokasi_populer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:msrv_snap_count="1"
            app:msrv_gravity="center">

        </com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView>

        <!--<androidx.cardview.widget.CardView-->
            <!--app:cardCornerRadius="8dp"-->
            <!--android:layout_marginTop="4dp"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<LinearLayout-->
                <!--android:padding="16dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical">-->

                <!---->

            <!--</LinearLayout>-->

        <!--</androidx.cardview.widget.CardView>-->


    </LinearLayout>
</androidx.core.widget.NestedScrollView>